# theta

./: Cargo.toml  LICENSE  README.md  x86_64-theta_os.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  panic_handler.rs  serial.rs  vga_buffer.rs
tests/: print.rs  stack_overflow.rs
